Changelog
=========

3.2.4 (unreleased)
------------------

- Setup: Activate navigation portlet on the templatedossier.
  [phgross]

- Allow nested Templatedossiers.
  [phgross]

- Limit query depth in templatedossier listings(documents, trash).
  [phgross]

- Treeportlet: Implement deferred tree rendering.
  [phgross]

- Fixed German translation in logout overlay.
  [pha]

- Mail view: use sprite icons in the attachments list.
  [phgross]

- Implemented cache invalidation for TreeView portlet cache.
  [lgraf]

- Update og.mail tests according to changes in ftw.mail.
  (See https://github.com/4teamwork/ftw.mail/pull/17)

- Fixed typo in test_overview.py.
  [lknoepfel]

- Moved create repository script from opengever.zug package.
  [lknoepfel]

- Replaced ext-js function 'remove' with pure js version in advancedsearch.
  [lknoepfel]

- Fixed backref name of the groups_user join table.
  [phgross]

- Task overview: Hide client prefix in issuer value for a one client setup.
  [phgross]


3.2.3 (2014-04-01)
------------------

- Hide standard ftw.mail mail-in viewlet (we display the mail address in
  the byline).
  [lgraf]

- Removed og.mail IMailSettings registry interface (now done in ftw.mail).
  Added upgrade step to migrate settings to ftw.mail's IMailSettings and
  remove old og.mail IMailSettings.
  [lgraf]

- Provide an IntIdResolver adpater to generate Dossier Mail-In addresses
  based on IntIds, and use it instead of the old implementation.
  [lgraf]

- Removed IMailInAddress behavior. Not needed any more with ftw.mail 2.0.
  [lgraf]

- Replaced hardcoded workflow names with constants.
  [lknoepfel]

- Updated move destination widget to hide closed dossiers.
  [lknoepfel]

- Added french translation by I. Anthenien.
  [lknoepfel]

- ldap_util: Make check for user object classes case-insensitive.
  [lgraf]

- Added french translation by I. Anthenien.
  [lknoepfel]


3.2.2 (2014-03-11)
------------------
